DV/bugFix: fix paddings on billboard slider on mobile version, change opacity of home title movie info and make it title font-size dinamic

--- a/src/components/pages/Billboard/BillboardSlider/index.css
+++ b/src/components/pages/Billboard/BillboardSlider/index.css
@@ -6,6 +6,16 @@
   justify-content: center;
 }
 
+@media only screen and (max-width: 767px) {
+  .billContainer .slick-slide {
+    width: 210px !important;
+  }
+
+  .slick-list {
+    margin: 20px !important;
+  }
+}
+
 @media only screen and (min-width: 768px) {
   .mobileCardContainer {
     width: fit-content;
