--- a/src/components/pages/Billboard/index.css
+++ b/src/components/pages/Billboard/index.css
@@ -30,7 +30,7 @@
 @media only screen and (min-width: 768px) {
   .billContainer {
     padding-block: 3em;
-    padding-inline: 2em;
+    padding-inline: 4em;
   }
 
   .billContainer > h1 {
