--- a/src/components/pages/Home/HomeSlider/index.css
+++ b/src/components/pages/Home/HomeSlider/index.css
@@ -95,6 +95,7 @@ h1 {
     margin-top: 2rem;
     padding-inline: 2.2em;
     background-color: #d9d9d9;
+    opacity: 0.6;
     border: 5px solid var(--purple);
     border-left: none;
     border-radius: 0 6px 6px 0;
@@ -107,7 +108,7 @@ h1 {
   }
 
   .movieInfo h2 {
-    font-size: 69px;
+    font-size: clamp(24px, 4vw, 69px);
     font-weight: 300;
     margin-bottom: 20px;
     display: inline-block;
